# draft-genie

./: .dockerignore  .eslintrc.js  .gitignore  API_GATEWAY_INVESTIGATION_COMPLETE.md  AZURE_DEPLOYMENT_TEST_REPORT.md  AZURE_DEPLOYMENT_TEST_RESULTS.md  AZURE_INTERNAL_COMMUNICATION_INVESTIGATION.md  AZURE_QUICK_FIX.md  AZURE_TESTING_SUMMARY.md  CONSOLIDATION_VERIFICATION_REPORT.md  CORS_FIX_QUICK_START.md  DEPLOYMENT_FIXES_SUMMARY.md  DEPLOYMENT_GUIDE_POSTGRES_MIGRATION.md  DEPLOYMENT_SCRIPT_FIXES_SUMMARY.md  DEPLOYMENT_SCRIPT_READY.md  DEPLOYMENT_UPDATE_SUMMARY.md  DOCKER_SCRIPTS_SUMMARY.md  ENHANCED_LOGGING_COMPLETE.md  ENHANCED_LOGGING_IMPLEMENTATION_SUMMARY.md  ENHANCED_LOGGING_QUICK_START.md  ENHANCED_LOGGING_VERIFICATION_CHECKLIST.md  GETTING_STARTED.md  MIGRATION_NEXT_STEPS.md  MONGODB_TO_POSTGRESQL_MIGRATION.md  PHASE_5_6_COMPLETE.md  README.md  SERVICE_TESTING_RESULTS.md  SPEAKER_CREATION_ERROR_TROUBLESHOOTING.md  azure-test-report.json  azure_service_details.html  azure_service_details.md  deployment_refactor_spec.md  jest.config.js  jest.preset.js  nx.json  package-lock.json  package.json  tsconfig.json
config/: ports.json
docker/: .env.example  Dockerfile.api-gateway  Dockerfile.base  Dockerfile.draft-service  Dockerfile.evaluation-service  Dockerfile.rag-service  Dockerfile.speaker-service  docker-compose.yml
docs/: ANALYSIS_COMPLETE_SUMMARY.md  API_GATEWAY_FIX_SUMMARY.md  API_QUICK_REFERENCE.md  CORS_FIX_DEPLOYMENT_GUIDE.md  CURRENT_STATUS_AND_NEXT_STEPS.md  DATABASE_COMPATIBILITY_MATRIX.md  DATABASE_MIGRATION_INDEX.md  DATABASE_MIGRATION_QUICK_REFERENCE.md  DEPLOYMENT.md  DEPLOYMENT_HANDBOOK.md  DEPLOYMENT_HANDBOOK_SUMMARY.md  DOCKER_BUILD_ISSUES.md  DraftGenie_API.postman_collection.json  ENHANCED_LOGGING_ARCHITECTURE.md  ENHANCED_LOGGING_GUIDE.md  EVENT_INFRASTRUCTURE_GUIDE.md  FINAL_INTEGRATION_STATUS.md  FINAL_STATUS.md  FRONTEND_API_DOCUMENTATION.md  FRONTEND_TEAM_HANDOFF.md  MANUAL_TESTING_GUIDE.md  MIGRATION_SUMMARY.md  PHASE1_COMPLETION.md  PHASE_2_COMPLETION_SUMMARY.md  PHASE_3_COMPLETION_SUMMARY.md  PHASE_3_DAY_8_COMPLETION.md  PHASE_3_DAY_9_COMPLETION.md  PHASE_3_VERIFICATION_CHECKLIST.md  PHASE_4_COMPLETION_SUMMARY.md  PHASE_4_DAY_11_COMPLETION.md  PHASE_5_COMPLETION_SUMMARY.md  PHASE_5_DAY_15_COMPLETION.md  PHASE_5_DAY_16_COMPLETION.md  PHASE_5_DAY_17_COMPLETION.md  PHASE_5_IMPLEMENTATION_REVIEW.md  PHASE_6_COMPLETION_SUMMARY.md  PHASE_6_DAY_19_COMPLETION.md  PHASE_6_DAY_20_COMPLETION.md  PHASE_6_DAY_21_COMPLETION.md  PHASE_7_COMPLETION_SUMMARY.md  (+35 more)
libs/python/: README.md  pyproject.toml
libs/python/common/: __init__.py  constants.py  enhanced_logging.py  errors.py  logger.py  logging_middleware.py  utils.py
libs/python/database/: __init__.py  mongodb.py  postgres.py  qdrant.py  redis.py
libs/python/domain/: __init__.py  events.py  models.py  repositories.py  value_objects.py
libs/python/events/: __init__.py  consumer.py  publisher.py
libs/python/tests/: __init__.py  test_database_clients.py  test_domain_events.py  test_domain_models.py  test_domain_value_objects.py
schemas/: README.md
scripts/: README.md  setup.sh  (+26 more)
services/draft-service/: .env.example  README.md  pyproject.toml  pytest.ini
services/draft-service/alembic/: env.py
services/draft-service/app/: __init__.py  main.py
services/draft-service/app/api/: __init__.py  drafts.py  health.py  vectors.py
services/draft-service/app/clients/: __init__.py  instanote_client.py
services/draft-service/app/core/: __init__.py  config.py  logging.py
services/draft-service/app/db/: database.py  mongodb.py  qdrant.py
services/draft-service/app/events/: __init__.py  consumer.py  handlers.py  publisher.py
services/draft-service/app/models/: __init__.py  correction_vector.py  draft.py  draft_db.py
services/draft-service/app/repositories/: __init__.py  draft_repository.py  draft_repository_sql.py  vector_repository_sql.py
services/draft-service/app/services/: __init__.py  correction_service.py  draft_service.py  embedding_service.py  vector_service.py
services/draft-service/tests/: conftest.py  test_draft_service.py  test_health.py
services/evaluation-service/: .env.example  README.md  pyproject.toml  pytest.ini
services/evaluation-service/app/: __init__.py  main.py
services/evaluation-service/app/api/: __init__.py  evaluations.py  health.py  metrics.py
services/evaluation-service/app/core/: __init__.py  config.py  logging.py
services/evaluation-service/app/db/: __init__.py  database.py
services/evaluation-service/app/events/: __init__.py  consumer.py  handler.py  publisher.py
services/evaluation-service/app/models/: __init__.py  evaluation.py  schemas.py
services/evaluation-service/app/services/: __init__.py  bucket_service.py  comparison_service.py  draft_client.py  evaluation_service.py  rag_client.py  similarity_service.py  speaker_client.py
services/evaluation-service/tests/: __init__.py  test_comparison_service.py  test_health.py
services/rag-service/: .env.example  README.md  alembic.ini  pyproject.toml  pytest.ini
services/rag-service/alembic/: env.py
services/rag-service/app/: __init__.py  main.py
services/rag-service/app/agents/: __init__.py  rag_agent.py
services/rag-service/app/api/: __init__.py  dfn.py  health.py  rag.py
services/rag-service/app/clients/: __init__.py  draft_client.py  speaker_client.py
services/rag-service/app/core/: __init__.py  config.py  logging.py
services/rag-service/app/db/: __init__.py  database.py  mongodb.py  qdrant.py
services/rag-service/app/events/: __init__.py  publisher.py
services/rag-service/app/models/: __init__.py  dfn.py  dfn_db.py  rag_session.py
services/rag-service/app/prompts/: __init__.py  templates.py
services/rag-service/app/repositories/: dfn_repository_sql.py  rag_session_repository_sql.py
services/rag-service/app/services/: __init__.py  context_service.py  dfn_service.py  llm_service.py  rag_pipeline.py  rag_session_service.py
services/rag-service/tests/: __init__.py  conftest.py  test_api_integration.py  test_e2e.py  test_health.py  test_rag_agent.py  test_rag_pipeline.py
(+188 files in other folders)
